@@ -1,3 +1,9 @@
+6/8/06 (frmky)
+  * Removed unused readRawS32() and writeRawS32() prototypes from ggnfs.h
+  * Incorporate the patch by forzles to fix the odd exponent error
+  * Silence the frequent, harmless warnings in the lattice sieve 
+  * Change the extension of the plots from jpg to png to reflect that
+    they are actually in PNG format
 
 05/24/06 (BRG)
   * Updated VC++ version 8 build project to use GMP-4.2.1
